--- a/training/master.yaml
+++ b/training/master.yaml
@@ -32,7 +32,7 @@ dataloader:
     validation: 10
   training:
     start: 2024-01-01
-    end: 2024-01-31
+    end: 2024-01-03
     dataset: ${dataloader.dataset} 
     frequency: 1
   validation:
@@ -52,12 +52,12 @@ hardware:
   num_gpus_per_model: 1
   accelerator: auto
   paths:
-    data: /lustre/storeB/project/fou/hi/foccus/datasets/prepro_norkyst_tests/ 
+    data: /lustre/storeB/project/fou/hi/foccus/datasets/ 
     output_base: /lustre/storeB/project/fou/hi/foccus/outputs/ #does nothing?
     output: null #do not change this, it will be modified in code to be output_base + run_id.
     graph: /lustre/storeB/project/fou/hi/foccus/graphs/
   files:
-    dataset: norkyst800_his_zdepth_2024_temp_m00_AN_ml.zarr
+    dataset: prepro_norkyst_tests/norkyst800_his_zdepth_2024_temp_m00_AN_ml.zarr
     graph: graph-3-12.pt
     warm_start: null #specific checkpoint to start from, defaults to last.ckpt
 
@@ -180,8 +180,8 @@ data:
 
 model:
   processor:
-    num_layers: 8 # will make model shit, but ok for testing
-  num_channels: 80
+    num_layers: 16 # 8 will make model shit, but ok for testing
+  num_channels: 1080
   trainable_parameters:
     data: 0
     hidden: 0
